Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12579

Incorrect arguments to mysqld_stmt_execute when using LOBs

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.2.5
    • 10.2.7
    • Prepared Statements
    • None
    • Linux Debian 8.6
    • 10.2.7-1

    Description

      When binding LOBs with MYSQL_TYPE_VAR_STRING or MYSQL_TYPE_LONG_BLOB and providing data with mysql_stmt_send_long_data(), we get the following error:

      -1210: Incorrect arguments to mysqld_stmt_execute
      

      The same C code works find with Oracle MySQL client.

      Attachments

        Activity

          People

            sanja Oleksandr Byelkin
            sebflaesch FLAESCH Sebastien
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.