MDEV-12579: Incorrect arguments to mysqld_stmt_execute when using LOBs

Parameters can be MYSQL_TYPE_VARCHAR for long data load.